--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -23,6 +23,10 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run Django System Checks
+      # 🚀 HERE IS THE FIX: We give it fake variables just for the test!
+      env:
+        SECRET_KEY: 'dummy-secret-key-for-github-actions'
+        DEBUG: 'True'
       run: python manage.py check
 
     - name: Success Message
